refactor: rename fields
